front-end ==>  FOOTER  --> OK

--- a/SCSS/layout/_footer.scss
+++ b/SCSS/layout/_footer.scss
@@ -4,29 +4,40 @@
 /* -------------------------------------------- */
 /* ---------------    FOOTER    --------------- */
 /* -------------------------------------------- */
-
 footer{
     background: $colorDark;
     color: $colorLight;
+}
+
+.icon-carte{
+    width: 50px;
+    height: auto;
+    margin: 10px 10px;
+}
+
+.footer-bottom{
     text-align: center;
     padding: 10px 0;
     line-height: 1.7;
     border-top: 0.1px solid $colorLight;
+    font-size: small;
     p{
         margin-bottom: 0;
     }
 }
 
+
+
 // MEDIUM ----------------------------------------------------------------------
 @include responsive(M){
-    footer{
+    .footer-bottom{
         font-size: 1rem;
     }
 }
 
 // SMALL -----------------------------------------------------------------------
 @include responsive(S){
-    footer{
+    .footer-bottom{
         padding: 3% 20%;
         line-height: 1.4;
         font-size: .8rem;
@@ -35,7 +46,7 @@ footer{
 
 // EXTRA SMALL -----------------------------------------------------------------
 @include responsive(XS){
-    footer{
+    .footer-bottom{
         font-size: 0.6rem;
         letter-spacing: 2px;
         padding: 5%;
