--- a/style.css
+++ b/style.css
@@ -6030,6 +6030,144 @@ ul {
   padding: 0;
 }
 
+/*
+    Flaticon icon font: Flaticon
+    Creation date: 17/04/2019 16:15
+*/
+@font-face {
+  font-family: "Flaticon";
+  src: url("fonts/flaticon/Flaticon.eot");
+  src: url("fonts/flaticon/Flaticon.eot?#iefix") format("embedded-opentype"), url("fonts/flaticon/Flaticon.woff2") format("woff2"), url("fonts/flaticon/Flaticon.woff") format("woff"), url("fonts/flaticon/Flaticon.ttf") format("truetype"), url("fonts/flaticon/Flaticon.svg#Flaticon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  @font-face {
+    font-family: "Flaticon";
+    src: url("fonts/flaticon/Flaticon.svg#Flaticon") format("svg");
+  }
+}
+
+.fi:before {
+  display: inline-block;
+  font-family: "Flaticon";
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  line-height: 1;
+  text-decoration: inherit;
+  text-rendering: optimizeLegibility;
+  text-transform: none;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+}
+
+.flaticon-facebook:before {
+  content: "\f100";
+}
+
+.flaticon-instagram:before {
+  content: "\f101";
+}
+
+.flaticon-placeholder:before {
+  content: "\f102";
+}
+
+.flaticon-phone-call:before {
+  content: "\f103";
+}
+
+.flaticon-menu:before {
+  content: "\f104";
+}
+
+.flaticon-home:before {
+  content: "\f105";
+}
+
+.flaticon-buddha:before {
+  content: "\f106";
+}
+
+.flaticon-china:before {
+  content: "\f107";
+}
+
+.flaticon-landmark:before {
+  content: "\f108";
+}
+
+.flaticon-chinese:before {
+  content: "\f109";
+}
+
+.flaticon-rice:before {
+  content: "\f10a";
+}
+
+.flaticon-rice-1:before {
+  content: "\f10b";
+}
+
+.flaticon-xiao-long-bao:before {
+  content: "\f10c";
+}
+
+.flaticon-shrimp:before {
+  content: "\f10d";
+}
+
+.flaticon-fish:before {
+  content: "\f10e";
+}
+
+.flaticon-salad:before {
+  content: "\f10f";
+}
+
+.flaticon-bird:before {
+  content: "\f110";
+}
+
+.flaticon-chicken:before {
+  content: "\f111";
+}
+
+.flaticon-pig:before {
+  content: "\f112";
+}
+
+.flaticon-soup:before {
+  content: "\f113";
+}
+
+.flaticon-china-1:before {
+  content: "\f114";
+}
+
+.flaticon-beans:before {
+  content: "\f115";
+}
+
+.flaticon-cow:before {
+  content: "\f116";
+}
+
+.flaticon-lamb:before {
+  content: "\f117";
+}
+
+.flaticon-twitter:before {
+  content: "\f118";
+}
+
+.flaticon-visa:before {
+  content: "\f119";
+}
+
 /* -------------------------------------------- */
 /* --------------    ANIMATED    -------------- */
 /* -------------------------------------------- */
@@ -6249,6 +6387,12 @@ ul {
   }
 }
 
+.icons {
+  display: inline;
+  font-family: Flaticon;
+  font-size: 1.5rem;
+}
+
 /* -------------------------------------------- */
 /* ---------------    NAVBAR    --------------- */
 /* -------------------------------------------- */
@@ -6399,24 +6543,34 @@ ul {
 footer {
   background: #333;
   color: #fefefe;
+}
+
+.icon-carte {
+  width: 50px;
+  height: auto;
+  margin: 10px 10px;
+}
+
+.footer-bottom {
   text-align: center;
   padding: 10px 0;
   line-height: 1.7;
   border-top: 0.1px solid #fefefe;
+  font-size: small;
 }
 
-footer p {
+.footer-bottom p {
   margin-bottom: 0;
 }
 
 @media only screen and (min-width: 768px) and (max-width: calc(992px - 1px)) {
-  footer {
+  .footer-bottom {
     font-size: 1rem;
   }
 }
 
 @media only screen and (min-width: 480px) and (max-width: calc(768px - 1px)) {
-  footer {
+  .footer-bottom {
     padding: 3% 20%;
     line-height: 1.4;
     font-size: .8rem;
@@ -6424,7 +6578,7 @@ footer p {
 }
 
 @media only screen and (min-width: 320px) and (max-width: calc(480px - 1px)) {
-  footer {
+  .footer-bottom {
     font-size: 0.6rem;
     letter-spacing: 2px;
     padding: 5%;
