front-end & back-end : formule-buffet ==> OK

--- a/SCSS/pages/_buffet.scss
+++ b/SCSS/pages/_buffet.scss
@@ -1,6 +1,13 @@
 // main: ../style.scss
 
+.card-formule{
+    margin-bottom: 2rem;
+}
 
+.item-drink{
+    line-height: 2rem;
+    margin: 10px 10px;
+}
 
 
 
