--- a/SCSS/modules/_icons.scss
+++ b/SCSS/modules/_icons.scss
@@ -6,7 +6,18 @@
     font-size: 1.5rem;
 }
 
+.icon-carte{
+    width: 50px;
+    height: auto;
+    margin: 10px 10px;
+}
 
+.icon-drink{
+    width: 30px;
+    height: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+}
 
 // MEDIUM ----------------------------------------------------------------------
 @include responsive(M){
