--- a/style.css
+++ b/style.css
@@ -6393,6 +6393,19 @@ ul {
   font-size: 1.5rem;
 }
 
+.icon-carte {
+  width: 50px;
+  height: auto;
+  margin: 10px 10px;
+}
+
+.icon-drink {
+  width: 30px;
+  height: auto;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
 /* -------------------------------------------- */
 /* ---------------    NAVBAR    --------------- */
 /* -------------------------------------------- */
@@ -6545,12 +6558,6 @@ footer {
   color: #fefefe;
 }
 
-.icon-carte {
-  width: 50px;
-  height: auto;
-  margin: 10px 10px;
-}
-
 .footer-bottom {
   text-align: center;
   padding: 10px 0;
@@ -6583,4 +6590,13 @@ footer {
     letter-spacing: 2px;
     padding: 5%;
   }
+}
+
+.card-formule {
+  margin-bottom: 2rem;
+}
+
+.item-drink {
+  line-height: 2rem;
+  margin: 10px 10px;
 }
