--- a/SCSS/pages/_accueil.scss
+++ b/SCSS/pages/_accueil.scss
@@ -1,8 +1,20 @@
 // main: ../style.scss
 
+.bg-cover{
+    @include bg-cover;
+    height: 100vh;
+}
 
-
-
+.img-cover{
+    img{
+        background-position: 50% 50%;
+        background-size: cover;
+        height: 100vh;
+        position: absolute;
+        z-index: -1;
+        background-attachment: fixed;
+    }
+}
 
 
 
