--- a/css/admin-style.css
+++ b/css/admin-style.css
@@ -138,6 +138,25 @@ Version: 1.0
 }
 
 /* -------------------------------------------------------------------------- */
+/* CUSTOM ADMIN SUBMENU OPTION THEME */
+/* -------------------------------------------------------------------------- */
+
+.table-btn{
+    margin-top: 10px;
+    border-collapse: collapse;
+    padding: 0;
+}
+
+.table-btn td{
+    padding: 10px;
+}
+
+.table-btn input[type="text"]{
+    width: 500px;
+}
+
+
+/* -------------------------------------------------------------------------- */
 /* CUSTOM PAGE ALBUM */
 /* -------------------------------------------------------------------------- */
 
