--- a/style.css
+++ b/style.css
@@ -6610,6 +6610,11 @@ footer {
   background-attachment: fixed;
 }
 
+.bg-section {
+  /* @include bg-cover; */
+  height: 80vh;
+}
+
 .card-formule {
   margin-bottom: 2rem;
 }
