--- a/css/admin-style.css
+++ b/css/admin-style.css
@@ -138,7 +138,7 @@ Version: 1.0
 }
 
 /* -------------------------------------------------------------------------- */
-/* CUSTOM ADMIN SUBMENU OPTION THEME */
+/* CUSTOM ADMIN PAGE ACCUEIL */
 /* -------------------------------------------------------------------------- */
 
 .table-btn{
@@ -155,6 +155,13 @@ Version: 1.0
     width: 500px;
 }
 
+/* -------------------------------------------------------------------------- */
+/* CUSTOM ADMIN PAGE BUFFET */
+/* -------------------------------------------------------------------------- */
+.backend-element-buffet input[type="text"]{
+    width: 50px;
+    margin-right: 5px;
+}
 
 /* -------------------------------------------------------------------------- */
 /* CUSTOM PAGE ALBUM */
