--- a/SCSS/pages/_buffet.scss
+++ b/SCSS/pages/_buffet.scss
@@ -17,21 +17,93 @@
     width: 50%;
 }
 
+/* --- box-left --- */
+.box-left{
+    padding: 0 4%;
+    .description-buffet{
+        text-align: justify;
+    }
+}
+
+/* --- box-right --- */
+.box-right{
+    padding: 0 4% 2% 0;
+    .img-buffet{
+        &:nth-child(even){
+            margin-top: 30px;
+        }
+        img{
+            @include border-radius(15px);
+            margin-bottom: 20px;
+            @include shadow-regular;
+            height: 180px;
+        }
+    }
+}
 
 
 
 
 // MEDIUM ----------------------------------------------------------------------
 @include responsive(M){
-
+    .box-left{
+        .description-buffet{
+            font-size: medium;
+            margin-bottom: 3rem;
+        }
+    }
+    .box-right{
+        .img-buffet{
+            &:nth-child(even){
+                margin-top: 15px;
+            }
+            img{
+                margin-left: 12px;
+                height: 240px;
+            }
+        }
+    }
 }
 
 // SMALL -----------------------------------------------------------------------
 @include responsive(S){
-
+    .box-left{
+        .description-buffet{
+            margin-bottom: 3rem;
+        }
+    }
+    .box-right{
+        .img-buffet{
+            &:nth-child(even){
+                margin-left: -17px;
+            }
+            img{
+                margin-left: 20px;
+                height: 160px;
+            }
+        }
+    }
 }
 
 //  EXTRA SMALL ----------------------------------------------------------------
 @include responsive(XS){
-
+    .box-left{
+        .description-buffet{
+            font-size: small;
+            padding: 0 5px;
+            margin-bottom: 2rem;
+        }
+    }
+    .box-right{
+        padding: 0 18px;
+        .img-buffet{
+            &:nth-child(even){
+                margin-top: 20px;
+            }
+            img{
+                margin-bottom: 5px;
+                height: 100px;
+            }
+        }
+    }
 }
