--- a/css/admin-style.css
+++ b/css/admin-style.css
@@ -155,6 +155,22 @@ Version: 1.0
     width: 500px;
 }
 
+.backend-item-btn-img:first-child{
+    padding-right: 2rem;
+}
+.backend-item-btn-img:last-child{
+    padding-left: 2rem;
+}
+.backend-hiden-btn, .backend-btn-txt{
+    margin-bottom: 15px;
+}
+
+.backend-img-accueil{
+    max-width: 400px;
+    max-height: 200px;
+}
+
+
 /* -------------------------------------------------------------------------- */
 /* CUSTOM ADMIN PAGE BUFFET */
 /* -------------------------------------------------------------------------- */
@@ -168,20 +184,26 @@ Version: 1.0
     max-height: 150px;
 }
 
-.backend-item-img-buffet{
+.backend-item-img-buffet,
+.backend-item-btn-img{
     display: table-cell;
     border-right: 1px solid #e5e5e5;
     padding: 10px;
 }
 
-.backend-item-img-buffet:last-child{
+.backend-item-img-buffet:last-child,
+.backend-item-btn-img:last-child{
     border: none;
 }
 
 
-.backend-path-img-buffet input[type="text"]{
+.backend-path-img-buffet input[type="text"],
+.backend-patg-img-accueil input[type="text"],
+.backend-btn-txt input[type="text"]{
     width: 100%;
 }
+
+
 
 /* -------------------------------------------------------------------------- */
 /* CUSTOM PAGE ALBUM */
