video accueil OK

--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -27,6 +27,7 @@ Version: 1.0
 // MODULES ---------------------------------------------------------------------
 @import "modules/boutons";
 @import "modules/icons";
+@import 'modules/video';
 
 // LAYOUT ----------------------------------------------------------------------
 @import "layout/menu";
