--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -28,6 +28,7 @@ Version: 1.0
 @import "modules/boutons";
 @import "modules/icons";
 @import 'modules/video';
+@import 'modules/card';
 
 // LAYOUT ----------------------------------------------------------------------
 @import "layout/menu";
