--- a/SCSS/helper/mixins/_boxes.scss
+++ b/SCSS/helper/mixins/_boxes.scss
@@ -7,6 +7,21 @@
   border-radius: ($x);
 }
 
+//
+@mixin flex-center {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+
+    -webkit-box-pack: center;
+       -ms-flex-pack: center;
+     justify-content: center;
+
+    -webkit-box-align: center;
+       -ms-flex-align: center;
+          align-items: center;
+}
+
 // BOX-SHADOW -------------------------------------------------------------
 @mixin shadow-menu{
     -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.3);
