--- a/SCSS/modules/_boutons.scss
+++ b/SCSS/modules/_boutons.scss
@@ -45,6 +45,18 @@
     }
 }
 
+.btn-tarif{
+    .row{
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+    .btn{
+        width: 100%;
+        background-color: inherit;
+        border: 2px solid $colorPrimary;
+        text-transform: uppercase;
+    }
+}
 
 // MEDIUM ----------------------------------------------------------------------
 @include responsive(M){
