cpt - service-carte => OK

--- a/css/admin-style.css
+++ b/css/admin-style.css
@@ -6,6 +6,12 @@ Copyright: 2019 © Enza Lombardo
 Version: 1.0
 */
 
+.post-type-cartes #postdivrich{
+    display: none;
+}
+
+
+
 /* -------------------------------------------------------------------------- */
 /* GENERAL */
 /* -------------------------------------------------------------------------- */
