--- a/style.css
+++ b/style.css
@@ -6802,3 +6802,105 @@ footer {
     height: 100px;
   }
 }
+
+.card-event .card-title {
+  text-align: center;
+  margin-top: 0;
+  font-size: 2rem;
+  line-height: 1.2;
+}
+
+.img-event {
+  position: relative;
+  overflow: hidden;
+}
+
+.img-event img {
+  /* opacity: .5; */
+  height: 450px;
+}
+
+.info-event {
+  list-style: none;
+  display: inline-flex;
+  font-family: "Libre Baskerville", serif;
+  font-size: 1rem;
+  text-transform: uppercase;
+  line-height: 1;
+  padding-left: 0;
+}
+
+.info-event span {
+  padding: 0 10px;
+}
+
+.hovered .card-body {
+  position: absolute;
+  bottom: 0;
+  right: 15px;
+  left: 15px;
+  z-index: 2;
+  text-align: center;
+}
+
+.hovered:hover .btn-event {
+  opacity: 1;
+  max-height: 190px;
+}
+
+.btn-event {
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.btn-event::before, .btn-event::after {
+  display: block;
+  clear: both;
+  content: '';
+  width: 0;
+  height: 0;
+}
+
+@media only screen and (min-width: 768px) and (max-width: calc(992px - 1px)) {
+  .card-event .card-title {
+    font-size: calc( 2rem + (1.5 - 2) * ((100vw - 20rem) / (48 - 20)));
+  }
+  .card-event .info-event {
+    font-size: 12.1px;
+  }
+  .card-event span {
+    padding: 0 2px;
+  }
+  .card-event .btn {
+    font-size: smaller;
+    white-space: normal;
+    line-height: normal;
+  }
+  .img-event img {
+    height: 400px;
+  }
+}
+
+@media only screen and (min-width: 480px) and (max-width: calc(768px - 1px)) {
+  .img-event img {
+    height: auto;
+  }
+}
+
+@media only screen and (min-width: 320px) and (max-width: calc(480px - 1px)) {
+  .img-event img {
+    max-height: 450px;
+  }
+  .card-event .card-title {
+    font-size: calc( 1.8rem + (4.25 - 1.8) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 2 * (0.9rem + (4.25 - 2) * ((100vw - 20rem) / (48 - 20))));
+  }
+  .card-event .info-event {
+    font-size: .8em;
+  }
+  .card-event .btn {
+    font-size: smaller;
+  }
+}
