regle tpobleme navbar

--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -29,6 +29,7 @@ Version: 1.0
 @import "modules/icons";
 @import 'modules/video';
 @import 'modules/card';
+@import 'modules/cover';
 
 // LAYOUT ----------------------------------------------------------------------
 @import "layout/menu";
