--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -30,6 +30,7 @@ Version: 1.0
 @import 'modules/video';
 @import 'modules/card';
 @import 'modules/cover';
+@import 'modules/box';
 
 // LAYOUT ----------------------------------------------------------------------
 @import "layout/menu";
